# DiDTree

./: .gitignore  CMakeLists.txt
config/: synth_binary.conf
data/binary_small_0.93/: synthetic.conf
include/: dataset.h  log.h  types.h
src/: dataset.cpp  log.cpp  main.cpp
src/simulation/: sythnetic_data.py
